--- a/dropdown.html
+++ b/dropdown.html
@@ -7,11 +7,11 @@
   <body>
 
     <form action="" method="get">
-      <select id="color" onchange="colorChange()">
-        <option id="blue" value="blue" >Blue</option>
-        <option id="purple" value="purple" >Purple</option>
-        <option id="orange" value="orange" >Orange</option>
-        <option id="red" value="red" >Red</option>
+      <select id="color" onclick="colorChange()">
+        <option value="blue" >Blue</option>
+        <option  value="purple" >Purple</option>
+        <option  value="orange" >Orange</option>
+        <option  value="red" >Red</option>
       </select>
     </form>
 
