--- a/todo/todolist.html
+++ b/todo/todolist.html
@@ -14,7 +14,7 @@
 
       <h3>Todo</h3>
       <ul id="incomplete-tasks">
-        <li><input type="checkbox">
+        <!-- <li><input type="checkbox">
           <label>Pay Bills</label>
           <input type="text">
           <button class="edit">Edit</button>
@@ -25,16 +25,16 @@
           <label>Go Shopping</label>
           <input type="text" value="Go Shopping">
           <button class="edit">Edit</button>
-          <button class="delete">Delete</button></li>
+          <button class="delete">Delete</button></li> -->
       </ul>
 
       <h3>Completed</h3>
       <ul id="completed-tasks">
-        <li><input type="checkbox" checked>
+        <!-- <li><input type="checkbox" checked>
           <label>See the Doctor</label>
           <input type="text">
           <button class="edit">Edit</button>
-          <button class="delete">Delete</button></li>
+          <button class="delete">Delete</button></li> -->
       </ul>
     </div>
 
