--- a/angular.js/test.html
+++ b/angular.js/test.html
@@ -1,3 +1,18 @@
+<style>
+table, th , td {
+  border: 1px solid grey;
+  border-collapse: collapse;
+  padding: 5px;
+}
+table tr:nth-child(odd) {
+  background-color: #ff00ff;
+}
+table tr:nth-child(even) {
+  background-color: #FFD700;
+}
+</style>
+
+
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
@@ -13,8 +28,25 @@
     <br />
 
     <ul>
-      <li ng-repeat="x in myData"> {{x.Name}}  </li>
+      <li ng-repeat="x in myData"> {{x.Name}} - {{x.City}}, {{x.Country}}  </li>
     </ul>
+
+<table  >
+  <thead>
+  <tr>
+    <th>Name</th>
+    <th>City</th>
+    <th>Country</th>
+  </tr>
+  </thead>
+  <tbody>
+  <tr ng-repeat="x in myData | orderBy: 'City'">
+    <td>   {{x.Name}}   </td>
+    <td>   {{x.City}}   </td>
+    <td>   {{x.Country}}  </td>
+  </tr>
+  </tbody>
+  </table>
 
     </div>
   </body>
