--- a/angular.js/test.html
+++ b/angular.js/test.html
@@ -53,7 +53,6 @@ table tr:nth-child(even) {
   <table>
     <thead>
     <tr>
-      <th>User ID</th>
       <th>First Name</th>
       <th>Last Name</th>
       <th>city</th>
@@ -61,7 +60,6 @@ table tr:nth-child(even) {
     </thead>
     <tbody>
     <tr ng-repeat="x in myDatas ">
-      <td>   {{x.userid}}   </td>
       <td>   {{x.first_name}}   </td>
       <td>   {{x.last_name}}   </td>
       <td>   {{x.city}}  </td>
@@ -76,5 +74,5 @@ table tr:nth-child(even) {
 
     <script src="myApp.js"> </script>
   <script src="myCtrl.js"> </script>
-  <script src="myPHP.php"> </script>
+  <script src="table.php"> </script>
 </html>
