--- a/angular.js/test.html
+++ b/angular.js/test.html
@@ -60,9 +60,9 @@ table tr:nth-child(even) {
     </thead>
     <tbody>
     <tr ng-repeat="x in myDatas ">
-      <td>   {{x.first_name}}   </td>
-      <td>   {{x.last_name}}   </td>
-      <td>   {{x.city}}  </td>
+      <td>   {{x.FirstName}}   </td>
+      <td>   {{x.LastName}}   </td>
+      <td>   {{x.City}}  </td>
     </tr>
     </tbody>
     </table>
