--- a/angular.js/test.html
+++ b/angular.js/test.html
@@ -59,7 +59,7 @@ table tr:nth-child(even) {
     </tr>
     </thead>
     <tbody>
-    <tr ng-repeat="x in myDatas ">
+    <tr ng-repeat="x in myPHPData ">
       <td>   {{x.FirstName}}   </td>
       <td>   {{x.LastName}}   </td>
       <td>   {{x.City}}  </td>
