--- a/angular.js/test.html
+++ b/angular.js/test.html
@@ -72,7 +72,7 @@ table tr:nth-child(even) {
     </div>
   </body>
 
-    <script src="myapp.js"> </script>
+    <script src="myApp.js"> </script>
   <script src="myCtrl.js"> </script>
   <script src="table.php"> </script>
 </html>
