--- a/angular.js/test.html
+++ b/angular.js/test.html
@@ -60,9 +60,9 @@ table tr:nth-child(even) {
     </thead>
     <tbody>
     <tr ng-repeat="x in myPHPData ">
-      <td>   {{x.FirstName}}   </td>
-      <td>   {{x.LastName}}   </td>
-      <td>   {{x.City}}  </td>
+      <td>   {{x.firstName}}   </td>
+      <td>   {{x.lastName}}   </td>
+      <td>   {{x.city}}  </td>
     </tr>
     </tbody>
     </table>
