--- a/bootstrap/example/starter-template/todolist.html
+++ b/bootstrap/example/starter-template/todolist.html
@@ -19,38 +19,7 @@
 
   <body>
 
-    <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-      <a class="navbar-brand" href="#">Navbar</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
 
-      <div class="collapse navbar-collapse" id="navbarsExampleDefault">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link disabled" href="#">Disabled</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="https://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
-            <div class="dropdown-menu" aria-labelledby="dropdown01">
-              <a class="dropdown-item" href="#">Action</a>
-              <a class="dropdown-item" href="#">Another action</a>
-              <a class="dropdown-item" href="#">Something else here</a>
-            </div>
-          </li>
-        </ul>
-        <form class="form-inline my-2 my-lg-0">
-          <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-        </form>
-      </div>
-    </nav>
 
 
     <main role="main" class="container">
@@ -62,78 +31,49 @@
         <div class=" col-md-4">
             <div class="card">
           <div class="card-body">
-            <h5 class="card-title">My pet</h5>
-            <p class="card-text">I have a cat named Hex who is 4 years old and about 13 pounds..</p>
-            <a href="#" class="btn btn-primary">Play with string</a>
+            <h5 class="card-title">To Do List</h5>
+            <p class="card-text">
+
+            </p>
+            <a href="#" class="btn btn-primary">Add to List</a>
           </div>
         </div>
       </div>
 
+      <div class="row">
 
-        <!-- with picture-->
-
+        <!-- no header or footer -->
         <div class=" col-md-4">
-        <div class="card">
-          <img class="card-img-top" src="hex.jpg" alt="Card image cap">
+            <div class="card">
           <div class="card-body">
-            <p class="card-text">Hex :3 years ago.</p>
+            <h5 class="card-title">Incompleted</h5>
+            <p class="card-text">
+
+            </p>
+
           </div>
         </div>
       </div>
 
-        <!-- card with header and footer-->
-        <div class="col-md-4">
-        <div class="card text-center">
-        <div class="card-header">
-          Featured
-        </div>
-        <div class="card-body">
-          <h5 class="card-title">Hex</h5>
-          <p class="card-text">Loving cat. Fearsome preditor of tissue paper, catnip, treats, and furniture.</p>
-          <a href="#" class="btn btn-primary">Go to catnip</a>
-        </div>
-        <div class="card-footer text-muted">
-          Cute cat
+      <div class="row">
+
+        <!-- no header or footer -->
+        <div class=" col-md-4">
+            <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">Completed</h5>
+            <p class="card-text">
+
+            </p>
+          
+          </div>
         </div>
       </div>
-    </div>
+
+
 
 <!-- secod row -->
       </div>
-
-<div class="row">
-
-  <!-- with picture-->
-
-  <div class=" col-md-5">
-  <div class="card">
-    <img class="card-img-top" src="hexK.jpg" alt="Card image cap">
-    <div class="card-body">
-      <p class="card-text">Hex :3 years ago.</p>
-    </div>
-  </div>
-  </div>
-
-  <div class="starter-template">
-    <h1>Cats!</h1>
-    <p class="lead">A fun topic.</p>
-  </div>
-
-
-  <!-- with picture-->
-
-  <div class=" col-md-5">
-  <div class="card">
-    <img class="card-img-top" src="hexN.jpg" alt="Card image cap">
-    <div class="card-body">
-      <p class="card-text">Hex now.</p>
-    </div>
-  </div>
-</div>
-
-
-
-</div>
 
 
 
