--- a/bootstrap/example/starter-template/todolist.html
+++ b/bootstrap/example/starter-template/todolist.html
@@ -33,7 +33,7 @@
           <div class="card-body">
             <h5 class="card-title">To Do List</h5>
             <p class="card-text">
-
+              text here
             </p>
             <a href="#" class="btn btn-primary">Add to List</a>
           </div>
@@ -48,7 +48,7 @@
           <div class="card-body">
             <h5 class="card-title">Incompleted</h5>
             <p class="card-text">
-
+              text here
             </p>
 
           </div>
@@ -63,9 +63,9 @@
           <div class="card-body">
             <h5 class="card-title">Completed</h5>
             <p class="card-text">
-
+              text here
             </p>
-          
+
           </div>
         </div>
       </div>
