--- a/bootstrap/example/starter-template/todolist.html
+++ b/bootstrap/example/starter-template/todolist.html
@@ -55,17 +55,13 @@
               <table>
                 <thead>
                   <tr>
-                    <th>First Name</th>
-                    <th>Last Name</th>
-                    <th>city</th>
+                    <th>Task</th>
                   </tr>
                 </thead>
                 <!-- -->
                 <tbody>
                   <tr ng-repeat="x in myPHPData">
-                    <td>{{x.firstName}}</td>
-                    <td>{{x.lastName}}</td>
-                    <td>{{x.city}}</td>
+                    <td>{{x.task}}</td>
                   </tr>
                 </tbody>
               </table>
@@ -84,17 +80,13 @@
               <table>
                 <thead>
                   <tr>
-                    <th>First Name</th>
-                    <th>Last Name</th>
-                    <th>city</th>
+                    <th>Complete</th>
                   </tr>
                 </thead>
                 <!-- -->
                 <tbody>
                   <tr ng-repeat="x in myPHPData">
-                    <td>{{x.firstName}}</td>
-                    <td>{{x.lastName}}</td>
-                    <td>{{x.city}}</td>
+                    <td>{{x.complete}}</td>
                   </tr>
                 </tbody>
               </table>
