--- a/bootstrap/example/starter-template/todolist.html
+++ b/bootstrap/example/starter-template/todolist.html
@@ -61,7 +61,7 @@
                 <!-- -->
                 <tbody>
                   <tr ng-repeat="x in myPHPData">
-                    <td>{{x.task}}</td>
+                    <td>{{x.task}} edit, delete</td>
                   </tr>
                 </tbody>
               </table>
@@ -86,7 +86,7 @@
                 <!-- -->
                 <tbody>
                   <tr ng-repeat="x in myPHPData">
-                    <td>{{x.complete}}</td>
+                    <td>{{x.complete}} edit, delete</td>
                   </tr>
                 </tbody>
               </table>
