--- a/bootstrap/example/starter-template/todolist.html
+++ b/bootstrap/example/starter-template/todolist.html
@@ -36,7 +36,7 @@
             <h5 class="card-title">To Do List</h5>
             <p class="card-text">
 
-                Name: <input ng-model="firstname">
+                Name: <input ng-model="x.task">
 
             </p>
             <a href="#" class="btn btn-primary">Add to List</a>
@@ -53,17 +53,11 @@
             <h5 class="card-title">Incompleted</h5>
             <p class="card-text">
               <table>
-                <thead>
-                  <tr>
-                    <th>Task</th>
-                  </tr>
-                </thead>
-                <!-- -->
-                <tbody>
+
                   <tr ng-repeat="x in myPHPData">
                     <td>{{x.task}} edit, delete</td>
                   </tr>
-                </tbody>
+
               </table>
             </p>
 
@@ -78,17 +72,11 @@
             <h5 class="card-title">Completed</h5>
             <p class="card-text">
               <table>
-                <thead>
-                  <tr>
-                    <th>Complete</th>
-                  </tr>
-                </thead>
-                <!-- -->
-                <tbody>
+
                   <tr ng-repeat="x in myPHPData">
                     <td>{{x.complete}} edit, delete</td>
                   </tr>
-                </tbody>
+                
               </table>
             </p>
 
