--- a/bootstrap/example/starter-template/todolist.html
+++ b/bootstrap/example/starter-template/todolist.html
@@ -55,7 +55,7 @@
               <table>
 
                   <tr ng-repeat="x in myPHPData">
-                    <td>{{x.task}} edit, delete</td>
+                    <td>{{x.task}} <a href="#" class="btn btn-primary">Edit</a> <a href="#" class="btn btn-primary">Delete</a></td>
                   </tr>
 
               </table>
@@ -74,9 +74,9 @@
               <table>
 
                   <tr ng-repeat="x in myPHPData">
-                    <td>{{x.complete}} edit, delete</td>
+                    <td>{{x.complete}} <a href="#" class="btn btn-primary">Edit</a> <a href="#" class="btn btn-primary">Delete</a></td>
                   </tr>
-                
+
               </table>
             </p>
 
