--- a/bootstrap/example/starter-template/todolist.html
+++ b/bootstrap/example/starter-template/todolist.html
@@ -36,7 +36,7 @@
             <h5 class="card-title">To Do List</h5>
             <p class="card-text">
               <div ng-app="myApp" ng-controller="myCtrl">
-                Name: <input ng-model="x.task">
+                Name: <input ng-model="x in myPHPData">
 
             </p>
             <a href="#" class="btn btn-primary">Add to List</a>
@@ -84,6 +84,7 @@
           </div>
         </div>
       </div>
+
     </div>
 
 
