--- a/bootstrap/example/starter-template/todolist.html
+++ b/bootstrap/example/starter-template/todolist.html
@@ -111,7 +111,7 @@
 <script>
 var fetch = angular.module('myapp', []);
 
-fetch.controller('userCtrl', ['$scope', '$http', function ($scope, $http) {
+fetch.controller('myCtrl', ['$scope', '$http', function ($scope, $http) {
 
  // Get all records
  $http({
