--- a/bootstrap/example/starter-template/todolist.html
+++ b/bootstrap/example/starter-template/todolist.html
@@ -54,7 +54,7 @@
               <table>
                 <div ng-app="myApp" ng-controller="myCtrl">
                   <tr ng-repeat="x in items">
-                    <td><input type='button' id='but_save' value='Add Complete' ng-click="addC()" > {{ x.task }} <input type='button' ng-click='remove($index,task.toDo_id);' value='Delete'></td>
+                    <td><input type='button' id='but_save' value='Add Complete' ng-click="addC()" > {{ x.task }} <input type='button' ng-click='remove($index,task.item.id);' value='Delete'></td>
                   </tr>
                 </div>
               </table>
@@ -75,7 +75,7 @@
               <table>
                 <div ng-app="myApp" ng-controller="myCtrl">
                   <tr ng-repeat="x in items">
-                    <td><input type='button' id='but_save' value='Add Incomplete' ng-click="addI()" > {{ x.complete }} </a> <input type='button' ng-click='remove($index,task.toDo_id);' value='Delete'></td>
+                    <td><input type='button' id='but_save' value='Add Incomplete' ng-click="addI()" > {{ x.complete }} </a> <input type='button' ng-click='remove($index,task.item.id);' value='Delete'></td>
                   </tr>
                 </div>
               </table>
@@ -135,12 +135,12 @@ fetch.controller('myCtrl', ['$scope', '$http', function ($scope, $http) {
  }
 
  // Remove record
- $scope.remove = function(index,toDo_id){
+ $scope.remove = function(index,itemid){
 
   $http({
    method: 'post',
    url: 'addremove.php',
-   data: {item_id:item_id,request_type:3},
+   data: {itemid:itemid,request_type:3},
   }).then(function successCallback(response) {
    $scope.items.splice(index, 1);
   });
