--- a/bootstrap/example/starter-template/todolist.html
+++ b/bootstrap/example/starter-template/todolist.html
@@ -36,7 +36,7 @@
             <h5 class="card-title">To Do List</h5>
             <p class="card-text">
               <div ng-app="myApp" ng-controller="myCtrl">
-                <input type='text' id='txt_uname' ng-model='uname'>
+                <input type='text' id='txt' ng-model='item'>
             </p>
             <input type='button' id='but_save' value='Save' ng-click="add()" >
           </div>
