--- a/bootstrap/example/starter-template/todolist.html
+++ b/bootstrap/example/starter-template/todolist.html
@@ -95,8 +95,6 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
 
-    <script src="myApp.js"> </script>
-    <script src="myCtrl.js"> </script>
 
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
@@ -109,9 +107,10 @@
 
 
 <script>
-var fetch = angular.module('myapp', []);
+let app = angular.module("myApp", []);
 
-fetch.controller('myCtrl', ['$scope', '$http', function ($scope, $http) {
+
+app.controller('myCtrl', ['$scope', '$http', function ($scope, $http) {
 
  // Get all records
  $http({
