--- a/bootstrap/example/starter-template/todolist.html
+++ b/bootstrap/example/starter-template/todolist.html
@@ -54,7 +54,7 @@
               <table>
                 <div ng-app="myApp" ng-controller="myCtrl">
                   <tr ng-repeat="x in items">
-                    <td><input type='button' id='but_save' value='Add Complete' ng-click="addC()" > {{ x.task }} <input type='button' ng-click='remove($index,task.item.id);' value='Delete'></td>
+                    <td><input type='button' id='but_save' value='Add Complete' ng-click="addC($index,task.item.id)" > {{ x.task }} <input type='button' ng-click='remove($index,task.item.id);' value='Delete'></td>
                   </tr>
                 </div>
               </table>
@@ -75,7 +75,7 @@
               <table>
                 <div ng-app="myApp" ng-controller="myCtrl">
                   <tr ng-repeat="x in items">
-                    <td><input type='button' id='but_save' value='Add Incomplete' ng-click="addI()" > {{ x.complete }} </a> <input type='button' ng-click='remove($index,task.item.id);' value='Delete'></td>
+                    <td><input type='button' id='but_save' value='Add Incomplete' ng-click="addI($index,task.item.id)" > {{ x.complete }} </a> <input type='button' ng-click='remove($index,task.item.id);' value='Delete'></td>
                   </tr>
                 </div>
               </table>
@@ -148,7 +148,7 @@ app.controller('myCtrl', ['$scope', '$http', function ($scope, $http) {
 
  //for completed list
  // Add new record
- $scope.addC = function(){
+ $scope.addC = function(index,itemid){
   $http({
    method: 'post',
    url: 'addremove.php',
@@ -160,7 +160,7 @@ app.controller('myCtrl', ['$scope', '$http', function ($scope, $http) {
 
  //for completed list
  // Add new record
- $scope.addI = function(){
+ $scope.addI = function(index,itemid){
   $http({
    method: 'post',
    url: 'addremove.php',
