--- a/bootstrap/example/starter-template/todolist.html
+++ b/bootstrap/example/starter-template/todolist.html
@@ -58,7 +58,7 @@
 
 
                       <!-- Trigger the modal with a button -->
-  <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Edit</button>
+  <button type="button"  data-toggle="modal" data-target="#myModal">Edit</button>
 
   <!-- Modal -->
   <div id="myModal" class="modal fade" role="dialog">
@@ -68,18 +68,14 @@
       <div class="modal-content">
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal">&times;</button>
-          <h4 class="modal-title">Edit data</h4>
         </div>
         <div class="modal-body">
           <p>Some text in the modal.</p>
         </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        </div>
       </div>
 
     </div>
-  </div>   
+  </div>
 
 
 
@@ -108,7 +104,7 @@
 
 
                       <!-- Trigger the modal with a button -->
-  <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Edit</button>
+  <button type="button"  data-toggle="modal" data-target="#myModal">Edit</button>
 
   <!-- Modal -->
   <div id="myModal" class="modal fade" role="dialog">
@@ -118,13 +114,9 @@
       <div class="modal-content">
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal">&times;</button>
-          <h4 class="modal-title">Edit data</h4>
         </div>
         <div class="modal-body">
           <p>Some text in the modal.</p>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
         </div>
       </div>
 
