--- a/bootstrap/example/starter-template/todolist.html
+++ b/bootstrap/example/starter-template/todolist.html
@@ -58,24 +58,30 @@
 
 
                       <!-- Trigger the modal with a button -->
-  <button type="button"  data-toggle="modal" data-target="#myModal">Edit</button>
+                      <button type="button"  data-toggle="modal" data-target="#myModal">Edit</button>
 
-  <!-- Modal -->
-  <div id="myModal" class="modal fade" role="dialog">
-    <div class="modal-dialog">
+                      <!-- Modal -->
+                      <div id="myModal" class="modal fade" role="dialog">
+                        <div class="modal-dialog">
 
-      <!-- Modal content-->
-      <div class="modal-content">
-        <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal">&times;</button>
-        </div>
-        <div class="modal-body">
-          <p>Some text in the modal.</p>
-        </div>
-      </div>
+                          <!-- Modal content-->
+                          <div class="modal-content">
+                            <div class="modal-header">
+                              <button type="button" class="close" data-dismiss="modal">&times;</button>
+                            </div>
+                            <div class="modal-body">
 
-    </div>
-  </div>
+                              <div class="form-group">
+                                <input type="text" class="form-control" ng-model="x.task" value="{{x.task}}">
+                              </div>
+                              <button class="btn btn-warning" ng-disabled="empList.$invalid" ng-click="updateT($index,task.item.id)">Update</button>
+
+
+                            </div>
+                          </div>
+
+                        </div>
+                      </div>
 
 
 
@@ -104,28 +110,32 @@
 
 
                       <!-- Trigger the modal with a button -->
-  <button type="button"  data-toggle="modal" data-target="#myModal">Edit</button>
+                      <button type="button"  data-toggle="modal" data-target="#myModal">Edit</button>
 
-  <!-- Modal -->
-  <div id="myModal" class="modal fade" role="dialog">
-    <div class="modal-dialog">
+                      <!-- Modal -->
+                      <div id="myModal" class="modal fade" role="dialog">
+                        <div class="modal-dialog">
 
-      <!-- Modal content-->
-      <div class="modal-content">
-        <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal">&times;</button>
-        </div>
-        <div class="modal-body">
-          <p>Some text in the modal.</p>
-        </div>
-      </div>
+                          <!-- Modal content-->
+                          <div class="modal-content">
+                            <div class="modal-header">
+                              <button type="button" class="close" data-dismiss="modal">&times;</button>
+                            </div>
+                            <div class="modal-body">
 
-    </div>
-  </div>
-
+                              <div class="form-group">
+                                <input type="text" class="form-control" ng-model="x.complete" value="{{x.complete}}">
+                              </div>
+                              <button class="btn btn-warning" ng-disabled="empList.$invalid" ng-click="updateC($index,complete.item.id)">Update</button>
 
 
-                     </a> <input type='button' ng-click='remove($index,task.item.id);' value='Delete'>
+                            </div>
+                          </div>
+
+                        </div>
+                      </div>
+
+                    </a> <input type='button' ng-click='remove($index,task.item.id);' value='Delete'>
 
                     </td>
                   </tr>
@@ -220,6 +230,27 @@ app.controller('myCtrl', ['$scope', '$http', function ($scope, $http) {
    $scope.items.push(response.data[0]);
   });
  }
+
+ $scope.updateT = function(index,itemid){
+  $http({
+   method: 'post',
+   url: 'addremove.php',
+   data: {task:$scope.task,request_type:6},
+  }).then(function successCallback(response) {
+   $scope.items.push(response.data[0]);
+  });
+ }
+
+ $scope.updateC = function(index,itemid){
+  $http({
+   method: 'post',
+   url: 'addremove.php',
+   data: {task:$scope.task,request_type:7},
+  }).then(function successCallback(response) {
+   $scope.items.push(response.data[0]);
+  });
+ }
+
 
 
 }]);
