--- a/bootstrap/example/starter-template/todolist.html
+++ b/bootstrap/example/starter-template/todolist.html
@@ -113,7 +113,7 @@
                       <button type="button"  data-toggle="modal" data-target="#myModal">Edit</button>
 
                       <!-- Modal -->
-                      <div id="myModal" class="modal fade" role="dialog">
+                      <div id="myModal2" class="modal fade" role="dialog">
                         <div class="modal-dialog">
 
                           <!-- Modal content-->
