--- a/bootstrap/example/starter-template/todolist.html
+++ b/bootstrap/example/starter-template/todolist.html
@@ -61,12 +61,13 @@
                       <button type="button"  data-toggle="modal" data-target="#myModal">Edit</button>
 
                       <!-- Modal -->
-                      <div id="myModal" class="modal fade" role="dialog">
+                      <div id="myModal1" class="modal fade" role="dialog">
                         <div class="modal-dialog">
 
                           <!-- Modal content-->
                           <div class="modal-content">
                             <div class="modal-header">
+                              <h5 class="modal-title" id="exampleModalLabel">Edit</h5>
                               <button type="button" class="close" data-dismiss="modal">&times;</button>
                             </div>
                             <div class="modal-body">
@@ -119,6 +120,7 @@
                           <!-- Modal content-->
                           <div class="modal-content">
                             <div class="modal-header">
+                              <h5 class="modal-title" id="ModalLabel">Edit</h5>
                               <button type="button" class="close" data-dismiss="modal">&times;</button>
                             </div>
                             <div class="modal-body">
