--- a/bootstrap/example/starter-template/todolist.html
+++ b/bootstrap/example/starter-template/todolist.html
@@ -61,7 +61,7 @@
                       <button type="button"  data-toggle="modal" data-target="#myModal">Edit</button>
 
                       <!-- Modal -->
-                      <div id="myModal1" class="modal fade" role="dialog">
+                      <div id="myModal" class="modal fade" role="dialog">
                         <div class="modal-dialog">
 
                           <!-- Modal content-->
@@ -113,7 +113,7 @@
                       <button type="button"  data-toggle="modal" data-target="#myModal">Edit</button>
 
                       <!-- Modal -->
-                      <div id="myModal2" class="modal fade" role="dialog">
+                      <div id="myModal" class="modal fade" role="dialog">
                         <div class="modal-dialog">
 
                           <!-- Modal content-->
@@ -135,7 +135,7 @@
                         </div>
                       </div>
 
-                    </a> <input type='button' ng-click='remove($index,task.item.id);' value='Delete'>
+                     </a> <input type='button' ng-click='remove($index,task.item.id);' value='Delete'>
 
                     </td>
                   </tr>
