--- a/bootstrap/example/starter-template/todolist.html
+++ b/bootstrap/example/starter-template/todolist.html
@@ -175,7 +175,7 @@ app.controller('myCtrl', ['$scope', '$http', function ($scope, $http) {
 
  // Get all records
  $http({
-  method: 'get',
+  method: 'post',
   url: 'addremove.php',
   data: {request_type:1},
 
