--- a/bootstrap/example/starter-template/todolist.html
+++ b/bootstrap/example/starter-template/todolist.html
@@ -195,7 +195,8 @@ app.controller('itemCtrl', ['$scope', '$http', function ($scope, $http) {
    url: 'addremove.php',
    data: {task:item,request_type:2},
   }).then(function successCallback(response) {
-   $scope.items.push(response.data[0]);
+  // $scope.items.push(response.data[0]);
+   $scope.items = response.data;
   });
  }
 
